--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: My Awesome Website
+title: cintel-01-pages
 description: Welcome to my personal page about business and technology.
 theme: jekyll-theme-cayman
